# ExamenParcial3

./: CMakeLists.txt  README.md
Solucion 1 (Prueba)/: CMakeLists.txt  main.cpp
Solucion 1 (Prueba)/Tareas/: Tareas.h
Solucion 1 (Simplificada)/: README.md
Solucion 1 (Simplificada)/Tareas/: Tareas.cpp
Solucion 2 (Mas especifico)/: main.cpp
Solucion 2 (Mas especifico)/clases/: Funciones.cpp
Tareas/: Tareas.cpp  Tareas.h
